--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -156,4 +156,9 @@
     }
 }
 
-@media screen and (max-width: 376px) {}
+@media screen and (max-width: 376px) {
+    #container-footer{
+        background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(25, 25, 25) 90.2%);
+        height: 82vh;
+    }
+}
