--- a/src/css/main.css
+++ b/src/css/main.css
@@ -323,8 +323,18 @@
     }
 
 }
+@media screen and (max-width: 400px){
+    #section-three {
+        width: 100%;
+        height: 57vh;
+        background-image: url("../assets/background-section3.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 376px){
     
     #section-one {
         width: 100%;
@@ -342,11 +352,20 @@
 
     #section-three {
         width: 100%;
-        height: 190vh;
+        height: 64vh;
         background-image: url("../assets/background-section3.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+    }
+
+    .img-descricao-section-three{
+        width: 7rem;
+        margin-top: -26rem;
+    }
+
+    .img-monitor-section-three{
+        width: 12rem;
     }
 
 }
