--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -14,9 +14,12 @@
 }
 
 
-#container-footer{
+#container-footer {
     background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(25, 25, 25) 90.2%);
-    height: 146vh;
+    min-height: 146vh; /* Use min-height ao invés de height fixa */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container-link-redes-monitor{
