--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -131,7 +131,7 @@ header {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: 1000; /* Garantir que o menu fique acima de outros elementos */
+        z-index: 1000; 
     }
     
     #mobile-links li {
