--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -16,7 +16,7 @@
 
 #container-footer{
     background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(25, 25, 25) 90.2%);
-    height: 146vh;
+    height: 139vh;
 }
 
 .container-link-redes-monitor{
@@ -118,6 +118,35 @@
     }
 }
 
+@media screen and (max-width: 820px) {
+    .titulo-monitor {
+        font-size: 5rem;
+    }
+    .copyright-img {
+        padding-top: 5rem;
+    }
+
+    .monitor-footer-img {
+        width: 90%;
+    }
+    #container-footer{
+        height: 55.5vh;
+    }
+    .copyright-img img{
+        width: 5rem;
+    }
+    .copyright-img p{
+        font-size: 9px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #container-footer{
+        padding-top: 3rem;
+        height: 62.8vh;
+    }
+}
+
 @media screen and (max-width: 500px) {
 
     .container-footer-mobile{
@@ -155,10 +184,16 @@
         text-align: center;
     }
 }
+@media screen and (max-width: 420px) {
+    #container-footer{
+        height: 70vh;
+    }
+}
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 376px) {    
+
     #container-footer{
         background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(25, 25, 25) 90.2%);
-        height: 82vh;
+        height: 87vh;
     }
 }
