--- a/src/css/main-content.css
+++ b/src/css/main-content.css
@@ -102,7 +102,7 @@
     
     #section-four {
         width: 100%;
-        height: 280vh;
+        height: 260vh;
         background-image: url("../assets/background-section4.png");
         background-repeat: no-repeat;
         background-position: center;
@@ -122,12 +122,13 @@
     }
 
     .img-section-four {
-        width: 70%;
+        width: 60%;
     }
 
     .container-descricao{
         display: flex;
         margin-left: 10rem;
+        gap: 1rem;
     }
 
     .img-descricao-four {
@@ -156,11 +157,43 @@
     }
 }
 
+@media screen and (max-width: 820px) {
+    .img-section-four {
+        width: 60%;
+    }
+    .titulo-principal h1 {
+        font-size: 3rem;
+    }
+    .img-descricao-four {
+        width: 90%;
+    }
+    .descricoes {
+        font-size: 1.16rem;
+        padding-top: 5rem;
+    }
+    .container-descricao {
+        margin-left: 5rem;
+    }
+    #section-four {
+        height: 240vh;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #section-four {
+        height: 260vh;
+    }
+
+    .descricoes {
+        font-size: 1.15rem;
+    }
+}
+
 @media screen and (max-width: 500px) {
 
     #section-four {
         width: 100%;
-        height: 320vh;
+        height: 160vh;
         background-image: url("../assets/background-section4.png");
         background-repeat: no-repeat;
         background-position: center;
@@ -168,6 +201,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .container-descricao{
+        gap: 0;
     }
 
     .container-section-four {
@@ -192,15 +229,13 @@
 
     .container-descricao {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
         margin: 0;
         width: 100%;
     }
 
     .container-titulo-img {
-        width: 100%;
-        text-align: center;
+        padding: 2rem;
     }
 
     .teste-flex {
@@ -211,25 +246,23 @@
     }
 
     .img-descricao-four {
-        width: 70%;
-        margin: 0 auto;
+        width: 100%;
+
     }
 
     .titulo-principal h1 {
         color: #d02c2c;
-        font-size: 4rem;
+        font-size: 2rem;
         font-family: Nexa-heavy;
         font-weight: 600;
  
     }
 
     .descricoes {
-        font-size: 1rem;
+        font-size: 11px;
         gap: 14px;
-        padding-top: 2rem;
+        padding-top: 5rem;
         width: 90%;
-        text-align: center;
-        padding: 10px;
     }
 
     .descricoes p {
@@ -237,26 +270,35 @@
         font-weight: 600;
         width: 100%;
     }
+
+
 }
 
 @media screen and (max-width: 400px){
     #section-four {
         width: 100%;
-        height: 340vh;
+        height: 165vh;
         background-image: url("../assets/background-section4.png");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: center;}
+
+    .img-descricao-four {
+        width: 110%;
+        gap: 10px;
+    }
+    .descricoes {
+        font-size: 10px;
     }
 }
 
 @media screen and (max-width: 376px) {
     #section-four {
         width: 100%;
-        height: 430vh;
+        height: 200vh;
         background-image: url("../assets/background-section4.png");
         background-repeat: no-repeat;
         background-position: center;
