--- a/src/css/main.css
+++ b/src/css/main.css
@@ -143,10 +143,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-    
+
     #section-one {
         width: 100%;
-        height: 95vh;
+        height: 100vh;
         background-image: url("../assets/Background-section1.png");
         background-repeat: no-repeat;
         background-position: center;
@@ -197,7 +197,7 @@
 
     #section-three {
         width: 100%;
-        height: 90vh;
+        height: 82vh;
         background-image: url("../assets/background-black.png");
         background-size: cover;
         background-position: center;
@@ -206,12 +206,12 @@
 
     .h1-section-three{
         margin-right: 20rem;
-        font-size: 10rem;
+        font-size: 8rem;
         text-align: center;
     }
 
     .img-descricao-section-three{
-        width: 16rem;
+        width: 14rem;
         margin-top: -12rem;
     }
 
@@ -232,7 +232,56 @@
         letter-spacing: 10px;
     }
 }
+@media screen and (max-width: 820px) {
 
+    #section-one {
+        height: 100vh;
+    }
+
+    #section-three {
+        height: 74vh;
+        background-image: url("../assets/background-section3.png"); 
+    }
+    .teste-teste {
+        width: 5%;
+    }
+
+    .container-conteudo{
+        gap: 15rem;
+    }
+
+    .h1-section-three{
+        margin-right: 20rem;
+        font-size: 7rem;
+        text-align: center;
+    }
+
+    .img-monitor-section-three{
+        width: 30rem;
+    }
+
+    .img-descricao-section-three{
+        width: 11rem;
+        margin-top: -16rem;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .h1-section-three{
+        font-size: 6rem;
+        
+    }
+
+    .img-descricao-section-three{
+        width: 9rem;
+
+    }
+    .img-monitor-section-three{
+        width: 26rem;
+    }
+}
 
 @media screen and (max-width: 650px) {
 
@@ -323,6 +372,26 @@
     }
 
 }
+@media screen and (max-width: 430px){
+    .text-section-two-mobile{
+        padding: 2rem;
+        font-size: 10px;
+    }
+
+    #section-three {
+        height: 48vh;
+    }
+    .container-conteudo{
+        gap: 8rem;
+    }
+
+    .img-descricao-section-three{
+        width: 7rem;
+    }
+}
+    
+
+
 @media screen and (max-width: 400px){
     #section-three {
         width: 100%;
@@ -331,6 +400,31 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+    }
+    
+}
+
+@media screen and  (max-width: 390px) {
+
+    .text-section-two-mobile{
+        padding: 2rem;
+        font-size: 10px;
+    }
+
+    #section-three {
+        height: 45vh;
+    }
+
+    .h1-section-three{
+        font-size: 3rem;
+    }
+
+    .img-descricao-section-three{
+        width: 6rem;
+    }
+
+    .img-monitor-section-three{
+        width: 12rem;
     }
 }
 
@@ -352,15 +446,18 @@
 
     #section-three {
         width: 100%;
-        height: 64vh;
+        height: 56vh;
         background-image: url("../assets/background-section3.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
     }
+    .h1-section-three{
+        font-size: 3.2rem;
+    }
 
     .img-descricao-section-three{
-        width: 7rem;
+        width: 6rem;
         margin-top: -26rem;
     }
 
