--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -99,7 +99,7 @@
 @media screen and (max-width: 1024px) {
     #container-footer{
         background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(25, 25, 25) 90.2%);
-        height: 61vh;
+        height: 100.7vh;
     }
     
     .container-link-redes-monitor{
@@ -143,7 +143,7 @@
 @media screen and (max-width: 768px) {
     #container-footer{
         padding-top: 3rem;
-        height: 62.8vh;
+        height: 73.8vh;
     }
 }
 
@@ -188,12 +188,32 @@
     #container-footer{
         height: 70vh;
     }
+    .redes-sociais {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 376px) {    
 
     #container-footer{
-        background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(25, 25, 25) 90.2%);
-        height: 87vh;
+        height: 70vh;
     }
+}
+
+@media screen and (max-width: 320px) {    
+    #container-footer{
+        height: 62vh;
+    }
+
+    .titulo-monitor {
+        font-size: 3rem;
+    }
+    .btn-compre-agora{
+        padding: 12px 22px;
+        font-size: 15px;}
+
+    .copyright-img p{
+        font-size: 8px;
+    }
+    
 }
