--- a/src/css/main.css
+++ b/src/css/main.css
@@ -141,6 +141,9 @@
     align-items: center;
     width: 80%;
 }
+@media screen and (max-width: 1070px) {
+       
+}
 
 @media screen and (max-width: 1024px) {
 
@@ -235,11 +238,11 @@
 @media screen and (max-width: 820px) {
 
     #section-one {
-        height: 100vh;
+        height: 140vh;
     }
 
     #section-three {
-        height: 74vh;
+        height: 108vh;
         background-image: url("../assets/background-section3.png"); 
     }
     .teste-teste {
@@ -273,7 +276,7 @@
         height: 130vh;
     }
     #section-three{
-        height: 90vh;
+        height: 95vh;
     }
 
     .h1-section-three{
@@ -352,6 +355,7 @@
         flex-direction: row;
         padding: 2rem;
         margin: 0;
+        gap: 10rem;
     }
 
     .h1-section-three{
@@ -399,8 +403,7 @@
     
 @media screen and (max-width: 425px){
     #section-three {
-        height: 50vh;
-
+        height: 55vh;
     }
 }
 
@@ -424,7 +427,7 @@
     }
 
     #section-three {
-        height: 45vh;
+        height: 48vh;
     }
 
     .h1-section-three{
@@ -458,7 +461,7 @@
 
     #section-three {
         width: 100%;
-        height: 43vh;
+        height: 48vh;
         background-image: url("../assets/background-section3.png");
         background-size: cover;
         background-position: center;
