--- a/src/css/main-content.css
+++ b/src/css/main-content.css
@@ -296,9 +296,12 @@
 
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 414px){
     #section-four {
         height: 185vh;
+    }
+    .descricoes{
+        font-size: 11px;
     }
 }
 
